# goit-pythonweb-hw-10

./: Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
migrations/: env.py
src/: schemas.py
src/api/: auth.py  birstdays.py  contacts.py  users.py  utils.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: bistdays.py  contacts.py  users.py
src/services/: auth.py  birstdays.py  contacts.py  users.py
